fix: align functioning title with the steps

--- a/assets/sass/all.scss
+++ b/assets/sass/all.scss
@@ -160,7 +160,7 @@ $button-gradient: linear-gradient(-10deg, #9356dc -11.44%, #ff79da 123.93%);
   &__title {
     font-size: 24px;
     font-weight: 700;
-    padding: 40px 0px 30px 20px;
+    padding: 40px 0px 30px 10px;
   }
 
   &__steps {
@@ -460,7 +460,7 @@ $button-gradient: linear-gradient(-10deg, #9356dc -11.44%, #ff79da 123.93%);
       display: flex;
       align-items: flex-start;
       margin: 0;
-      padding: 40px 0 30px 20px;
+      padding: 40px 0 30px 2%;
     }
     &__steps {
       display: flex;
